--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 anyio==3.6.2
 certifi==2023.5.7
 et-xmlfile==1.1.0
+freetype-py==2.3.0
 h11==0.14.0
 httpcore==0.17.2
 httpx==0.24.1
 idna==3.4
 openpyxl==3.1.2
+pdfdocument==4.0.0
+Pillow==9.5.0
+pycairo==1.23.0
 python-telegram-bot==20.3
+reportlab==4.0.0
+rlPyCairo==0.2.0
 sniffio==1.3.0
