--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-anyio==3.6.2
+anyio==3.7.0
 certifi==2023.5.7
 et-xmlfile==1.1.0
-freetype-py==2.3.0
 h11==0.14.0
 httpcore==0.17.2
 httpx==0.24.1
 idna==3.4
+numpy==1.24.3
 openpyxl==3.1.2
-pdfdocument==4.0.0
+pandas==2.0.2
 Pillow==9.5.0
-pycairo==1.23.0
+python-dateutil==2.8.2
 python-telegram-bot==20.3
-reportlab==4.0.0
-rlPyCairo==0.2.0
+pytz==2023.3
+reportlab==4.0.4
+six==1.16.0
 sniffio==1.3.0
+tzdata==2023.3
